<resources>
    <string name="app_name">Todos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Todos</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_user_exist">L\'adresse mail fournie existe déjà !</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_memo_edit_activity">Edit</string>
    <string name="title_memo_view_activity">View</string>

    <string name="memo_empty">Cannot save empty memo ...</string>
    <string name="memo_save">Saving memo ...</string>

    <!-- Strings related to login -->
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register New Account</string>
    <string name="link_to_register">New to our app ? Register here</string>
    <string name="link_to_login">Already has account! Login here</string>
    <string name="error_invalid_email">adresse mail invalide !</string>
    <string name="error_fullName">le nom donnée est invalide !</string>
    <string name="error_invalid_password">le mot de passe doit contenir au moins 6 caractères !</string>
    <string name="error_login">Identifiant ou mot de passe saisi incorrect !</string>
    <string name="error_fields">Un ou plusieurs champs sont manquants ou incorrects !</string>

    <string name="title_activity_register">Register</string>

    <string name="login_register">Login / Register</string>
    <string name="my_lists">My Lists</string>
    <string name="synchronize">Synchronize</string>
    <string name="parameters">Parameters</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="not_connected">Not connected</string>
    <string name="user">User : </string>

    <string name="selected_items">selected memos</string>
    <string name="selected_item">selected memo</string>
    <string name="title_activity_todo_list">TodoListActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_add">New</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="new_todo_list">New ToDo list</string>
    <string name="new_todo">New ToDo</string>


    <string name="cannot_have_empty_todo">ToDo cannot be empty !</string>
    <string name="cannot_have_empty_title">Title cannot be empty !</string>
    <string name="logout">Logout</string>

    <string name="action_share">Share</string>
    <string name="action_remove">Remove</string>
    <string name="action_edit">Edit</string>

    <string name="no_action_edit">You are not the author of this ToDo List. You cannot modify its title</string>
</resources>
