<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.todos.hkboam.todos.RegisterActivity">

    <TextView
        android:id="@+id/register_field_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/red"
        android:text=""/>

    <!-- Registration Form -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:id="@+id/register_form">

        <!-- Full Name Label -->
        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textColor="#372c24"
                  android:text="@string/full_name"/>
        <EditText android:id="@+id/reg_fullname"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dip"
                  android:singleLine="true"
                  android:layout_marginBottom="20dip"/>
        <!--  Email Label -->
        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textColor="#372c24"
                  android:text="@string/email"/>
        <EditText android:id="@+id/reg_email"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dip"
                  android:singleLine="true"
                  android:layout_marginBottom="20dip"/>
        <!-- Password Label -->
        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textColor="#372c24"
                  android:text="@string/password"/>
        <EditText android:id="@+id/reg_password"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:password="true"
                  android:singleLine="true"
                  android:layout_marginTop="5dip"/>
        <!-- Register Button -->
        <Button android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/register_button"/>
        <!-- Link to Login Screen -->
        <TextView android:id="@+id/link_to_login"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="40dip"
                  android:layout_marginBottom="40dip"
                  android:text="@string/link_to_login"
                  android:gravity="center"
                  android:textSize="20dip"
                  android:textColor="#025f7c"/>

    </LinearLayout>
    <!-- Registration Form Ends -->
</LinearLayout>